# tcc

./: .gitignore  Dockerfile  Dockerfile.worker  README.md  check_dependencies.py  create_tables.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_env.py  test_alicevision.py
src/: celery_app.py  create_tables.sql  create_tables_direct.py  database.py  init_db.py  main.py
src/converter/: tasks.py
src/converter/model/: entity.py  pet_entity.py
src/converter/routes/: model_routes.py  video_routes.py
src/converter/services/: alicevision_processor.py  export_img.py  meshroom_processor.py  video_service.py
src/object_values/: type_videos.py
src/tmp/: base-com-flash.HEIC  base-sem-flash.HEIC
