[project]
name = "tcc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "guilherme", email = "vinespedro55@gmail.com"},
]
dependencies = [
    "pydantic>=2.9.2",
    "opencv-python>=4.10.0.84",
    "numpy>=2.1.2",
    "imutils>=0.5.4",
    "pillow>=11.0.0",
    "ffmpeg>=1.4",
    "piexif>=1.1.3",
    "pyexiv2>=2.15.3",
    "fastapi[standard]>=0.115.8",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "celery>=5.4.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
